--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@ body,td,th {
 }
 </style>
 <link href="css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+@import url("button.css");
+</style>
 <script>var __adobewebfontsappname__="dreamweaver"</script>
 <script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 </head>
@@ -30,14 +33,14 @@ body,td,th {
 	  <div class="help1" id="help1" style="background-color:#12101be6;width:900px;height:350px;margin:0 auto;">
 	  <div class="none2" id="none2" style="height:20px"></div>
 	  <font size="+3" color="White" style="text-shadow:3px 3px 3px #542c90">&nbsp; &nbsp; &nbsp;Finished product(作品)</font>
-	  <button style="margin-left: 60px;font-size: 20px;color: #A90543;background: #1F1C2F" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button>
-<div class="none3" id="none3" style="height:10px"></div>
-	  <div class="none4" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="../下載/unknown3.png" alt="" width="347" height="174" align="absmiddle">
+	  <button style="margin-left: 60px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button>
+	  <div class="none3" id="none3" style="height:10px"></div>
+	  <div class="none4" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="images/unknown3.png" alt="" width="347" height="174" align="absmiddle">
 	  <div class="help2" id="help2" style="height: 150px;width: 400px; margin-top: -170px; margin-left: 450px">
 	  <p style="width: 300px;margin-top: -10px;color: #A90543;text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px">Mythicmobs EditMake<br>(MM怪物編輯器)</p>
 	  <font size="-1" style="color: antiquewhite">Convenient for making monster data of Minecraft MythicMobs Plugin to use.</font>
 	  <font size="-1" style="color: antiquewhite"><br>(方便製作Minecraft MythicMobs Plugin的怪物資料來使用)</font>
-		  </div>
+	    </div>
 	  <div class="none5" id="none5" style="height:50px"></div>
 	  </div>
 	  <div class="none6" id="none6" style="height:100px"></div>
