--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Xiatin Web</title>
-<link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
+<link href="../css/singlePageTemplate.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 body {
     background-color: #4E1B64;
@@ -17,7 +17,7 @@ body,td,th {
     font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
 }
 </style>
-<link href="css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
+<link href="../css/bootstrap-4.3.1.css" rel="stylesheet" type="text/css">
 <style type="text/css">
 @import url("button.css");
 </style>
@@ -35,7 +35,7 @@ body,td,th {
 	  <font size="+3" color="White" style="text-shadow:3px 3px 3px #542c90">&nbsp; &nbsp; &nbsp;Finished product(作品)</font>
 	  <button style="margin-left: 60px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button>
 	  <div class="none3" id="none3" style="height:10px"></div>
-	  <div class="none4" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="images/unknown3.png" alt="" width="347" height="174" align="absmiddle">
+	  <div class="image" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="../images/unknown3.png" alt="" width="347" height="174" align="absmiddle">
 	  <div class="help2" id="help2" style="height: 150px;width: 400px; margin-top: -170px; margin-left: 450px">
 	  <p style="width: 300px;margin-top: -10px;color: #A90543;text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px">Mythicmobs EditMake<br>(MM怪物編輯器)</p>
 	  <font size="-1" style="color: antiquewhite">Convenient for making monster data of Minecraft MythicMobs Plugin to use.</font>
@@ -45,7 +45,9 @@ body,td,th {
 	  </div>
 	  <div class="none6" id="none6" style="height:100px"></div>
 		
-    <div class="copyright" style="margin-top: 100px">&copy;2020- <strong>By Xiatin</strong></div>
+    <div class="copyright" style="margin-top: 100px;background: #6A358D;height: 60px">&copy;2020- <strong>By Xiatin</strong>
+    <font size="+1" style="margin-left: 100px"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Discord: Xiatin#5200</font>
+		  </div>
   </div>
 </div>
 </div>
