--- a/index.html
+++ b/index.html
@@ -26,27 +26,33 @@ body,td,th {
 </head>
 <body style="background: #4E1B64">
 <div class="about" id="block1" style="background: #29173E;height: 100%;width: 100%">
-<div class="Welcome" id="Welcome" style="background: url(https://www.ecopetit.cat/wpic/mpic/13-131756_boku-no-hero-wallpaper-4k.jpg); background-position: top; margin-top: 5px; margin-right: auto; margin-left: auto; margin-bottom: 10px;height: 720px;width: auto">
+<div class="Welcome" id="Welcome" style="background: url(https://www.ecopetit.cat/wpic/mpic/13-131756_boku-no-hero-wallpaper-4k.jpg); background-position: top; margin-top: 5px; margin-right: auto; margin-left: auto; margin-bottom: 10px;height: 920px;width: auto">
   <div class="none" id="none" style="height:100px"></div>
 	  <font size="+5" color="#12101b" style="text-shadow:rgba(10, 189, 240, 0.298039) 3px 3px 0px, rgba(254, 1, 1, 0.298039) -3px -3px 0px">&nbsp; &nbsp; &nbsp;<b> Welcome</b></font>
 	  <div class="none1" id="none1" style="height:80px"></div>
-	  <div class="help1" id="help1" style="background-color:#12101be6;width:900px;height:350px;margin:0 auto;">
+	  <div class="help1" id="help1" style="background-color:#12101be6;width:900px;height:650px;margin:0 auto;">
 	  <div class="none2" id="none2" style="height:20px"></div>
 	  <font size="+3" color="White" style="text-shadow:3px 3px 3px #542c90">&nbsp; &nbsp; &nbsp;Finished product(作品)</font>
-	  <button style="margin-left: 60px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button>
+	  <button style="margin-left: 150px;margin-top: -50px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button>
 	  <div class="none3" id="none3" style="height:10px"></div>
-	  <div class="image" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="https://github.com/XiatinTW/XiatinWebsite/blob/master/images/unknown3.png?raw=true" alt="" width="347" height="174" align="absmiddle">
+	  <div class="image" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp; <img src="../images/unknown3.png" alt="" width="347" height="174" align="absmiddle">
 	  <div class="help2" id="help2" style="height: 150px;width: 400px; margin-top: -170px; margin-left: 450px">
 	  <p style="width: 300px;margin-top: -10px;color: #A90543;text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px">Mythicmobs EditMake<br>(MM怪物編輯器)</p>
 	  <font size="-1" style="color: antiquewhite">Convenient for making monster data of Minecraft MythicMobs Plugin to use.</font>
 	  <font size="-1" style="color: antiquewhite"><br>(方便製作Minecraft MythicMobs Plugin的怪物資料來使用)</font>
 	    </div>
-	  <div class="none5" id="none5" style="height:50px"></div>
+		  <p style="height: 10px"></p>
+	  <div class="image" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp;
+	  <button style="margin-left: 600px;margin-top: -20px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button> <img style="margin-left: 80px;margin-top: -80px"  src="images/3DModel.png" width="347" height="174" alt="" align="absmiddle"/>
 	  </div>
-	  <div class="none6" id="none6" style="height:100px"></div>
+	  <div class="help2" id="help3" style="height: 250px;width: 400px; margin-top: -170px; margin-left: 450px">
+	  <p style="width: 300px;margin-top: 65px;color: #A90543;text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px">3D Model<br>(3D模型)</p>
+	  <font size="-1" style="color: antiquewhite">Display finished products of minecraft items.</font>
+	  <font size="-1" style="color: antiquewhite"><br>(展示minecraft物品的成品)</font>
+	    </div>
 		
-    <div class="copyright" style="margin-top: 100px;background: #6A358D;height: 60px">&copy;2020- <strong>By Xiatin</strong>
-    <font size="+1" style="margin-left: 100px"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Discord: Xiatin#5200</font>
+    <div class="copyright" style="margin-top: 250px;background: #6A358D;height: 60px; width: 900px">&copy;2020- <strong>By Xiatin</strong>
+    <font size="+1" style="margin-left: 100px"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Discord: 嗶波#5200</font>
 		  </div>
   </div>
 </div>
