--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ body,td,th {
 	    </div>
 		  <p style="height: 10px"></p>
 	  <div class="image" id="none4" style="height:100px;width: 450px">&nbsp; &nbsp; &nbsp;
-	  <button style="margin-left: 600px;margin-top: -20px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://github.com/XiatinTW/Mythicmobs-EditMake'">Link</button> <img style="margin-left: 80px;margin-top: -80px"  src="images/3DModel.png" width="347" height="174" alt="" align="absmiddle"/>
+	  <button style="margin-left: 600px;margin-top: -20px;font-size: 20px" type="button" class="btn btn-dark" onClick="location.href='https://xiatintw.github.io/XiatinWebsite/3DModel.html'">Link</button> <img style="margin-left: 80px;margin-top: -80px"  src="images/3DModel.png" width="347" height="174" alt="" align="absmiddle"/>
 	  </div>
 	  <div class="help2" id="help3" style="height: 250px;width: 400px; margin-top: -170px; margin-left: 450px">
 	  <p style="width: 300px;margin-top: 65px;color: #A90543;text-shadow: rgba(0, 0, 0, 0.298039) 0px 5px 0px">3D Model<br>(3D模型)</p>
