--- a/3DModel.html
+++ b/3DModel.html
@@ -32,14 +32,18 @@ body,td,th {
 	  <div class="none1" id="none1" style="height:80px"></div>
 	  <div class="help1" id="help1" style="background-color:#12101be6;width:1200px;height:600px;margin:0 auto;">
 	  <div class="none2" id="none2" style="height:20px"></div>
-	  <font size="+3" color="White" style="text-shadow:3px 3px 3px #542c90">&nbsp; &nbsp; &nbsp;3D Model(作品)</font>
+	  <font size="+3" color="White" style="text-shadow:3px 3px 3px #542c90">&nbsp; &nbsp; &nbsp;3D Model(作品) 每個月新增一個(上傳限制)</font>
 	    <blockquote>
-		    <p style="width: 100px"> <a href="https://sketchfab.com/3d-models/sword01-38bd6a6463cd4b969868d508005d2f83?utm_medium=embed&amp;utm_source=website&amp;utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #dd55ff;">武者長劍</a></p>
+		    <p style="width: auto"> <a href="https://sketchfab.com/3d-models/sword01-38bd6a6463cd4b969868d508005d2f83?utm_medium=embed&amp;utm_source=website&amp;utm_campaign=share-popup" target="_blank" style="width: 100px;font-weight: bold; color: #dd55ff;">武者長劍</a><a href="https://skfb.ly/6TMRN" target="_blank" style="margin-top: -50px;margin-left: 540px; font-weight: bold; color: #dd55ff;">武者刀刃</a>
+			</p>
 <div class="sketchfab-embed-wrapper">
   <iframe title="A 3D model" width="480" height="320" src="https://sketchfab.com/models/38bd6a6463cd4b969868d508005d2f83/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  
+    <iframe style="margin-left: 140px" title="A 3D model" width="480" height="320" src="https://sketchfab.com/models/6db085d001dd4810b2421384f3f868ba/embed?autostart=1&amp;preload=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
     </p>
 </div>
+
 	    </blockquote>
 
 	  <div class="none3" id="none3" style="height:10px"></div>
@@ -50,7 +54,7 @@ body,td,th {
 	  <div class="none6" id="none6" style="height:100px"></div>
 		
     <div class="copyright" style="margin-top: 100px;background: #317d93;height: 60px;width: 1200px">&copy;2020- <strong>By Xiatin</strong>
-    <font size="+1" style="margin-left: 400px;text-align: right"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Discord: 嗶波#5200</font>
+    <font size="+1" style="margin-left: 400px;text-align: right"><br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Discord: Xiatin#5200</font>
 	    </div>
   </div>
 </div>
